generated-tests/tests/snapshots/rust/generated_tests__rust__test_generated_continue_expression.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
'label1: loop { continue 'label1; }

AST:
(source_file
  (expression_statement
    (loop_expression
      (label
        (identifier label1)
      )
      (block
        (expression_statement
          (continue_expression
            (label
              (identifier label1)
            )
          )
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "label1",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 2,
            end_line: 1,
            end_column: 8,
        },
        SerializableUsage {
            name: "label1",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 27,
            end_line: 1,
            end_column: 33,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
