generated-tests/tests/snapshots/rust/generated_tests__rust__test_generated_expression.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
var1 + 1

AST:
(source_file
  (ERROR
    (binary_expression
      (identifier var1)
      (integer_literal)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
