generated-tests/tests/snapshots/rust/generated_tests__rust__test_generated_function_signature_item.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
fn test_fn4() -> i32;

AST:
(source_file
  (function_signature_item
    (identifier test_fn4)
    (parameters)
    (primitive_type)
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "test_fn4",
            line_number: 1,
            definition_type: FunctionDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
