generated-tests/tests/snapshots/rust/generated_tests__rust__test_generated_identifier.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
identifier

AST:
(source_file
  (ERROR
    (identifier identifier)
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
